cleanup copyright info and comments